fix: prevent 500 errors on image form pages when Cloudinary is active - safely compute photo_url/image_url in views with try/except, update templates to use safe context url variables, remove duplicate rt_list function

--- a/dashboard/templates/dashboard/carousel_form.html
+++ b/dashboard/templates/dashboard/carousel_form.html
@@ -24,10 +24,10 @@
                     </div>
                     <div class="col-md-7">
                         {{ form.image|as_crispy_field }}
-                        {% if form.instance.image %}
+                        {% if image_url %}
                         <div class="mt-2">
                             <p class="small text-muted mb-1">Current Image:</p>
-                            <img src="{{ form.instance.image.url }}" class="img-thumbnail"
+                            <img src="{{ image_url }}" class="img-thumbnail"
                                 style="max-height: 200px; width: 100%; object-fit: cover;">
                         </div>
                         {% endif %}
