--- a/dashboard/templates/dashboard/team_form.html
+++ b/dashboard/templates/dashboard/team_form.html
@@ -28,9 +28,9 @@
                         <div class="mb-3">
                             {{ form.photo|as_crispy_field }}
                         </div>
-                        {% if form.instance.photo %}
+                        {% if photo_url %}
                         <div class="mt-2">
-                            <img src="{{ form.instance.photo.url }}" class="rounded-circle shadow-sm"
+                            <img src="{{ photo_url }}" class="rounded-circle shadow-sm"
                                 style="width: 120px; height: 120px; object-fit: cover;">
                         </div>
                         {% endif %}
