--- a/dashboard/templates/dashboard/project_form.html
+++ b/dashboard/templates/dashboard/project_form.html
@@ -9,7 +9,8 @@
     <div class="col-lg-11">
         <div class="dashboard-card shadow-sm">
             <div class="d-flex justify-content-between align-items-center mb-4">
-                <h5 class="fw-700 mb-0">{% if form.instance.pk %}Edit Project: {{ form.instance.title }}{% else  %}Project Specifications{% endif %}</h5>
+                <h5 class="fw-700 mb-0">{% if form.instance.pk %}Edit Project: {{ form.instance.title }}{% else
+                    %}Project Specifications{% endif %}</h5>
                 <a href="{% url 'dashboard:projects_list' %}" class="btn btn-outline-secondary btn-sm">
                     <i class="bi bi-arrow-left"></i> Back to List
                 </a>
@@ -40,8 +41,8 @@
                             </div>
                         </div>
                         {{ form.image|as_crispy_field }}
-                        {% if form.instance.image %}
-                        <img src="{{ form.instance.image.url }}" class="img-thumbnail mb-3" style="max-height: 120px;">
+                        {% if image_url %}
+                        <img src="{{ image_url }}" class="img-thumbnail mb-3" style="max-height: 120px;">
                         {% endif %}
                     </div>
                 </div>
